--- a/public/css/app.css
+++ b/public/css/app.css
@@ -82,6 +82,8 @@ h1, h2, h3, h4, h5, h6 {
 p {
   margin-top: 0;
   margin-bottom: 1rem;
+  color: cornsilk;
+  text-align: center;
 }
 
 abbr[title], abbr[data-original-title] {
@@ -146,13 +148,13 @@ sup {
 }
 
 a {
-  color: #3490dc;
+  color: #9034dc;
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #1d68a7;
+  color: #a71d1d;
   text-decoration: underline;
 }
 
